Adopt `.formatted` in ConflictDetection.java